# dinotrackviewer

./: .gitignore  CMakeLists.txt  Config.cpp  GLUtil.cpp  GLUtil.h  Makefile  PathAlignmentSimilarityEvaluator.cpp  PathAlignmentSimilarityEvaluator.h  SimilarityEvaluator.cpp  SimilarityEvaluator.h  YURT_config.xml  animationcontroller.cpp  animationcontroller.h  basic.frag  basic.geom  basic.vert  cursor.cpp  desktop.xml  dummy.cpp  dummy.h  filter.cpp  filter.h  footmeshviewer.cpp  footmeshviewer.h  main.cpp  movm.cpp  movm.h  newmain.cpp  oldmain.cpp  pathfilter.cpp  pathfilter.h  pointmanager.cpp  pointmanager.h  shader.cpp  shader.h  slide.cpp  slide.h  testmain.cpp  textboard.h  vertex.h  (+3 more)
doc/: dinotrackviewer.doxygen.in
shaders/: basic.frag  basic.geom  basic.vert  foot.frag  foot.vert  litpath.frag  litpath.vert  path.frag  shape.frag  shape.vert  slide.frag  surface.frag  surface.geom  surface.vert
